--- a/public/stock.html
+++ b/public/stock.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Stock Details</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <h1 id="stockTitle">Stock Details</h1>
     <div id="stockContainer"></div>
-    <script src="stockSocket.js"></script>
+    <script src="sockets/stockSocket.js"></script>
 </body>
 </html>
