--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
             <li><a href="options.html" target="contentFrame">Options</a></li>
             <li><a href="bar.html" target="contentFrame">Bars</a></li>
             <li><a href="dev.html" target="contentFrame">Develop</a></li>
-            <li><a href="ai.html" target="contentFrame">AI</a></li>
+            <!-- <li><a href="ai.html" target="contentFrame">AI</a></li> -->
 
-            <li class="search-bar">
+            <!-- <li class="search-bar">
                 <input id="indexSearch" type="text" name="search" placeholder="Search Stock..."
                     autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
-            </li>
+            </li> -->
         </ul>
     </nav>
     <div id="indexSearchResults" style="position: absolute; top: 50px; right: 10px;"></div>
