--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <title>Socket.IO Test</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
+    <!-- <h1>Algo Trader</h1> -->
     <nav>
         <ul>
             <li><a href="probability.html" target="contentFrame">Probability</a></li>
@@ -14,10 +15,10 @@
             <li><a href="dev.html" target="contentFrame">Develop</a></li>
             <!-- <li><a href="ai.html" target="contentFrame">AI</a></li> -->
 
-            <!-- <li class="search-bar">
+            <li class="search-bar">
                 <input id="indexSearch" type="text" name="search" placeholder="Search Stock..."
                     autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
-            </li> -->
+            </li>
         </ul>
     </nav>
     <div id="indexSearchResults" style="position: absolute; top: 50px; right: 10px;"></div>
