--- a/public/probability.html
+++ b/public/probability.html
@@ -12,6 +12,7 @@
             <option value="price" selected>Price</option>
             <option value="range">Range</option>
             <option value="outsideRange">Outside Range</option>
+            <option value="kelly">Kelly Criterion</option>
             <!-- <option value="options">Options</option> -->
         </select>
     <div id="probDiv"></div>
