--- a/public/stock.html
+++ b/public/stock.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <title>Stock Details</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    
     <h1 id="stockTitle">Stock Details</h1>
     <div id="stockContainer"></div>
+    <canvas id="stockChart"></canvas>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="sockets/stockSocket.js"></script>
 </body>
 </html>
